<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.ernet.iitg.app.Testing_Data"
    tools:showIn="@layout/activity_testing__data"
    android:background="@drawable/iitg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/testing_data_info"
        android:id="@+id/info"
        android:width="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelrometer_button"
        android:id="@+id/accelrometer"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:background="#70ef50"
        android:width="300dp"
        android:height="60dp"
        android:textSize="20sp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="20dp"
        android:textColor="#b22f2f"
        android:onClick="onAccelrometer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Magnetometer_Data"
        android:id="@+id/Magnetometer"
        android:width="300dp"
        android:height="60dp"
        android:textSize="20sp"
        android:background="#70ef50"
        android:textColor="#b22f2f"
        android:layout_below="@+id/accelrometer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onMagnetometer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rotation_vector"
        android:id="@+id/Rotation"
        android:layout_below="@+id/Magnetometer"
        android:layout_centerHorizontal="true"
        android:width="300dp"
        android:height="60dp"
        android:textSize="20sp"
        android:background="#70ef50"
        android:textColor="#b22f2f"
        android:layout_marginBottom="20dp"
        android:onClick="onRotation"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/All_sensor"
        android:id="@+id/AllSensor"
        android:layout_below="@+id/Rotation"
        android:layout_centerHorizontal="true"
        android:width="300dp"
        android:height="60dp"
        android:textSize="20sp"
        android:background="#70ef50"
        android:textColor="#b22f2f"
        android:onClick="onALL"/>

</RelativeLayout>
