<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.ernet.iitg.app.Show_accelrometer"
    tools:showIn="@layout/activity_show_accelrometer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Accelrometer_Data"
        android:id="@+id/accelrometer"
        android:width="300dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Accelrometer_title"
        android:textSize="30dp"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rate_accelration"
        android:entries="@array/Rate"
        android:layout_above="@+id/Start"
        android:layout_alignLeft="@+id/accelrometer"
        android:layout_alignStart="@+id/accelrometer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_button"
        android:id="@+id/Start"
        android:onClick="Startdata"
        android:layout_alignTop="@+id/Stop"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop_Button"
        android:id="@+id/Stop"
        android:onClick="Stopdata"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/accelrometer"
        android:layout_alignEnd="@+id/accelrometer" />


</RelativeLayout>
